tests/paczka1/fuzzy1/30262258.err
Error in line 16: timBg0Jt A524 42,6
Error in line 23: timBg0Jt A15 45,4
Error in line 19: Cq6aWftP96 A524 144,0
Error in line 27: Cq6aWftP96 S256 16,5
Error in line 31: DnmqPsr A558 12,4
